--- a/src/client/utils/styles/_variables.scss
+++ b/src/client/utils/styles/_variables.scss
@@ -32,7 +32,7 @@ $negative: #e14040;
 
 // Colors -------------------
 
-$brand:                   hsl(21, 100%, 50%);
+$brand:                   #1ea3e6;
 $dark:                    #004584;
 
 $error:                   hsla(0, 72%, 59%, 1.00);
